# metagen-c

./: .gitignore  CMakeLists.txt  README.md  build.zig  makefile  xxHash.cmake
.github/workflows/: build.yml  ci-linux.yml  ci-mac.yml  ci-win.yml  ci.yml
libs/argus/: README.md  argus.lua  scaffold.lua
libs/xxHash/: README.md  scaffold.lua  xxHash.lua
make/: format.make
scripts/: genie.lua  metagen.lua  toolchains.lua
src/: CMakeLists.txt  main.c
xxHash/: CMakeLists.txt
